Creado de formulario

--- a/src/components/FormToAddNumber/FormToAddNumber.css
+++ b/src/components/FormToAddNumber/FormToAddNumber.css
@@ -1,9 +1,9 @@
-.form {
+.button--open {
   position: fixed;
-  bottom: 15px;
   right: 15px;
-}
-.form__button {
+  bottom: 15px;
+  z-index: 2;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,6 +14,45 @@
   border-radius: 50%;
   border: transparent;
 }
-.form__button-open{
+.content--form__close--button {
   transform: rotate(45deg);
+
+  background-color: transparent;
+  border: none;
+}
+.content--form {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  padding: 20px;
+
+  background-color: #fff;
+  border-radius: 8px 8px 0 0;
+
+  animation: fadeUp 0.3s ease-in-out;
+}
+@keyframes fadeUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.fadeDown {
+  animation: fadeDown 0.3s ease-in-out;
+}
+@keyframes fadeDown {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
 }
