--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,22 @@
 .header {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   padding: 20px 10px;
   color: white;
+  text-align: center;
 }
-.header__title{
+.header__title {
   font-size: 30px;
   margin-bottom: 10px;
 }
-.header__subtitle{
+.header__subtitle {
   font-weight: 400;
+  max-width: 600px;
+}
+@media only screen and (min-width: 800px) {
+  .header__subtitle {
+    font-size: 18px;
+  }
 }
