--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -38,3 +38,9 @@
     transform: translateY(0);
   }
 }
+@media only screen and (min-width: 600px){
+  .notification{
+    left: 30%;
+    right: 30%;
+  }
+}
